force-app/main/default/objects/LoanRequest__c/LoanRequest__c.object-meta.xml
<CustomObject>
    <description>Transactional loan application with lifecycle, integration state, and escalation markers.</description>
    <label>Loan Request</label>
    <nameField>
        <displayFormat>LR-{00000000}</displayFormat>
        <label>Loan Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>