force-app/main/default/objects/LoanRequest__c/fields/DecisionReason__c.field-meta.xml
<CustomField>
    <fullName>DecisionReason__c</fullName>
    <description>Decision explanation. Required when Rejected. Restrict FLS in security milestone.</description>
    <label>Decision Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>