force-app/main/default/objects/LoanRequest__c/fields/ExternalDecisionReference__c.field-meta.xml
<CustomField>
    <fullName>ExternalDecisionReference__c</fullName>
    <description>Decision reference returned by the external approval system.</description>
    <label>External Decision Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>