force-app/main/default/objects/LoanRequest__c/fields/ExternalRequestId__c.field-meta.xml
<CustomField>
    <fullName>ExternalRequestId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Idempotency key for outbound approval requests and callbacks.</description>
    <externalId>true</externalId>
    <label>External Request Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>