force-app/main/default/objects/LoanRequest__c/fields/HighValueTaskCreated__c.field-meta.xml
<CustomField>
    <fullName>HighValueTaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Durable marker that the current above-threshold period already produced its escalation Task.</description>
    <label>High Value Task Created</label>
    <type>Checkbox</type>
</CustomField>