force-app/main/default/objects/LoanRequest__c/fields/IntegrationLastAttempt__c.field-meta.xml
<CustomField>
    <fullName>IntegrationLastAttempt__c</fullName>
    <description>Timestamp of the most recent outbound integration attempt.</description>
    <label>Integration Last Attempt</label>
    <type>DateTime</type>
</CustomField>