force-app/main/default/objects/LoanRequest__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <description>Requested loan amount. High-value threshold is strictly greater than configured policy.</description>
    <label>Loan Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>