force-app/main/default/objects/LoanRequest__c/fields/LoanStatus__c.field-meta.xml
<CustomField>
    <fullName>LoanStatus__c</fullName>
    <description>Controlled loan lifecycle status.</description>
    <label>Loan Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>