force-app/main/default/objects/LoanRequest__c/fields/SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDate__c</fullName>
    <description>Business submission timestamp. Required when status is beyond Draft.</description>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>