force-app/main/default/objects/LoanRequest__c/validationRules/Integration_State_Consistency.validationRule-meta.xml
<ValidationRule>
    <fullName>Integration_State_Consistency</fullName>
    <active>true</active>
    <description>Not Sent must not have an external request ID; other statuses require one. Succeeded requires a decision reference.</description>
    <errorConditionFormula>OR(
  AND(
    TEXT(IntegrationStatus__c) = &quot;Not Sent&quot;,
    NOT(ISBLANK(ExternalRequestId__c))
  ),
  AND(
    OR(
      TEXT(IntegrationStatus__c) = &quot;Pending&quot;,
      TEXT(IntegrationStatus__c) = &quot;Succeeded&quot;,
      TEXT(IntegrationStatus__c) = &quot;Retry Pending&quot;,
      TEXT(IntegrationStatus__c) = &quot;Failed&quot;
    ),
    ISBLANK(ExternalRequestId__c)
  ),
  AND(
    TEXT(IntegrationStatus__c) = &quot;Succeeded&quot;,
    ISBLANK(ExternalDecisionReference__c)
  )
)</errorConditionFormula>
    <errorMessage>Integration status is inconsistent with external request ID and/or decision reference.</errorMessage>
</ValidationRule>