force-app/main/default/objects/LoanRequest__c/validationRules/Loan_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Loan amount must be greater than zero.</description>
    <errorConditionFormula>OR(
  ISBLANK(LoanAmount__c),
  LoanAmount__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>LoanAmount__c</errorDisplayField>
    <errorMessage>Loan amount must be greater than zero.</errorMessage>
</ValidationRule>