force-app/main/default/objects/LoanRequest__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Rejected loans require a decision reason.</description>
    <errorConditionFormula>AND(
  TEXT(LoanStatus__c) = &quot;Rejected&quot;,
  ISBLANK(DecisionReason__c)
)</errorConditionFormula>
    <errorDisplayField>DecisionReason__c</errorDisplayField>
    <errorMessage>A decision reason is required when the loan is Rejected.</errorMessage>
</ValidationRule>