force-app/main/default/objects/LoanRequest__c/validationRules/Submission_Prerequisites.validationRule-meta.xml
<ValidationRule>
    <fullName>Submission_Prerequisites</fullName>
    <active>true</active>
    <description>Leaving Draft requires an active customer with email. Manager fallback routing is enforced in Apex.</description>
    <errorConditionFormula>AND(
  TEXT(LoanStatus__c) &lt;&gt; &quot;Draft&quot;,
  OR(
    ISBLANK(Customer__c),
    NOT(Customer__r.IsActive__c),
    ISBLANK(Customer__r.Email__c)
  )
)</errorConditionFormula>
    <errorMessage>Loans beyond Draft require an active customer with an email address.</errorMessage>
</ValidationRule>