force-app/main/default/objects/LoanRequest__c/listViews/Draft_Loans.listView-meta.xml
<ListView>
    <fullName>Draft_Loans</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>LoanAmount__c</columns>
    <columns>LoanStatus__c</columns>
    <columns>SubmissionDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LoanStatus__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Loans</label>
</ListView>