force-app/main/default/objects/LoanRequest__c/listViews/Integration_Exceptions.listView-meta.xml
<ListView>
    <fullName>Integration_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>LoanStatus__c</columns>
    <columns>IntegrationStatus__c</columns>
    <columns>ExternalRequestId__c</columns>
    <columns>IntegrationLastAttempt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IntegrationStatus__c</field>
        <operation>equals</operation>
        <value>Failed,Retry Pending</value>
    </filters>
    <label>Integration Exceptions</label>
</ListView>